--- a/css/custom.css
+++ b/css/custom.css
@@ -11,6 +11,20 @@
     
 }
 
+.btn-secondary{
+    background: none;
+    border-color: #173A56;
+    padding: 15px 40px 15px 40px;
+    font-size: 16px;
+    font-weight: bold;
+    color:#173A56;
+}
+
+.btn-secondary:hover{
+    background: #be8125;
+    
+}
+
 .hero h1{
     font-family: 'Poppins', sans-serif;
     font-weight: 700;
